--- a/egs/mixdata/token_voc1/conf/hifigan_token_16k_nodp.v1.yaml
+++ b/egs/mixdata/token_voc1/conf/hifigan_token_16k_nodp.v1.yaml
@@ -25,11 +25,12 @@ format: "hdf5"           # Feature file format. "npy" or "hdf5" is supported.
 ###########################################################
 #         GENERATOR NETWORK ARCHITECTURE SETTING          #
 ###########################################################
-generator_type: DiscreteSymbolHiFiGANGenerator
+generator_type: DiscreteSymbolF0Generator
 generator_params:
     in_channels: 768                      # Number of input channels.
     out_channels: 1                       # Number of output channels.
     channels: 512                         # Number of initial channels.
+    linear_channel: 256                   # Number of Linear channels(f0).
     num_embs: 1025
     kernel_size: 7                        # Kernel size of initial and final conv layers.
     upsample_scales: [10, 8, 2, 2]        # Upsampling scales.
@@ -46,6 +47,12 @@ generator_params:
         negative_slope: 0.1
     use_weight_norm: true                 # Whether to apply weight normalization.
     num_spk_embs: 0                       # Do not consider speaker embedding for single spk
+    
+    use_embedding_feats: false            # Whether to use continous embedding features from pre-trained model
+    use_weight_sum: false                  # Whether to use weighted sum for multi layer feats (multi layer)
+    layer_num: 12                         # Numbert of layers used (multi layer)
+    use_fix_weight: false                 # Whether to frozen the weight in use_weight_sum (multi_layer, Residual Cluster)
+    use_f0: false                          # Whether to add additioal f0
 
 ###########################################################
 #       DISCRIMINATOR NETWORK ARCHITECTURE SETTING        #
