--- a/egs/opencpop/token_voc1/conf/hifigan_embedding_16k_nodp_mr.v1.yaml
+++ b/egs/opencpop/token_voc1/conf/hifigan_embedding_16k_nodp_mr.v1.yaml
@@ -1,10 +1,14 @@
 # This configuration is based on HiFiGAN V1, derived
 # from official repository (https://github.com/jik876/hifi-gan).
 
+# derived hifigan_token_16k_nodp.v1.yaml
+
+# for 16k pre-trained model token, like HuBERT, WavLM, XSL-R...
+
 ###########################################################
 #                FEATURE EXTRACTION SETTING               #
 ###########################################################
-sampling_rate: 24000     # Sampling rate.
+sampling_rate: 16000     # Sampling rate.
 fft_size: null           # FFT size.
 hop_size: 320            # Hop size.
 win_length: null         # Window length.
@@ -23,7 +27,7 @@ format: "hdf5"           # Feature file format. "npy" or "hdf5" is supported.
 ###########################################################
 #         GENERATOR NETWORK ARCHITECTURE SETTING          #
 ###########################################################
-generator_type: DiscreteSymbolF0Generator
+generator_type: DiscreteMRSymbolF0Generator
 generator_params:
     in_channels: 768                      # Number of input channels.
     out_channels: 1                       # Number of output channels.
@@ -44,14 +48,17 @@ generator_params:
     nonlinear_activation_params:          # Nonlinear activation paramters.
         negative_slope: 0.1
     use_weight_norm: true                 # Whether to apply weight normalization.
-    # duration_layers: 2                    # Duration predictor layers
-    # duration_chans: 384                   # Duration predictor conv channels
-    # duration_kernel_size: 3               # Duration predictor kernel size
-    # duration_offset: 1.0                  # Duration predictor offset 
-    # duration_dropout_rate: 0.5            # Duration predictor dropout
     num_spk_embs: 0                       # Do not consider speaker embedding for single spk
     
-    use_weight_sum: false                  # Whether to apply weight sum
+    use_embedding_feats: true            # Whether to use continous embedding features from pre-trained model
+    use_weight_sum: true                  # Whether to use weighted sum for multi layer feats (multi layer)
+    layer_num: 13                         # Numbert of layers used (multi layer)
+    use_fix_weight: false                 # Whether to frozen the weight in use_weight_sum (multi_layer, Residual Cluster)
+    use_f0: false                          # Whether to add additioal f0
+    
+    use_multi_resolution: true            # Whether to use multi resolution feaure
+    src_rs: 20                            # Resolution for input token
+    add_rs: [40, 80]                      # Additional resolution for used token. (target resolution = src_rs + add_rs)
 
 ###########################################################
 #       DISCRIMINATOR NETWORK ARCHITECTURE SETTING        #
@@ -65,7 +72,7 @@ discriminator_params:
         stride: 2                          # Pooling stride.
         padding: 2                         # Padding size.
     scale_discriminator_params:
-        in_channels: 1                     # Number of input channels.
+        in_channels: 1                    # Number of input channels.
         out_channels: 1                    # Number of output channels.
         kernel_sizes: [15, 41, 5, 3]       # List of kernel sizes.
         channels: 128                      # Initial number of channels.
@@ -102,10 +109,10 @@ duration_loss_params:
     reduction: mean
 use_mel_loss: true   # Whether to use Mel-spectrogram loss.
 mel_loss_params:     # Mel-spectrogram loss parameters.
-    fs: 24000
-    fft_size: 2048
-    hop_size: 300
-    win_length: 1200
+    fs: 16000
+    fft_size: 1024
+    hop_size: 256
+    win_length: null
     window: "hann"
     num_mels: 80
     fmin: 0
@@ -136,7 +143,7 @@ batch_max_steps: 10240      # Length of each audio in batch. Make sure dividable
 pin_memory: true            # Whether to pin memory in Pytorch DataLoader.
 num_workers: 0              # Number of workers in Pytorch DataLoader.
 remove_short_samples: false # Whether to remove samples the length of which are less than batch_max_steps.
-allow_cache: true           # Whether to allow cache in dataset. If true, it requires cpu memory.
+allow_cache: false           # Whether to allow cache in dataset. If true, it requires cpu memory.
 
 ###########################################################
 #             OPTIMIZER & SCHEDULER SETTING               #
